# spot-crypto-trend

./: .flake8  .gitignore  CODEOWNERS  LICENSE  MODULE.bazel  Makefile  README.md  SmaCross.html  WORKSPACE  combine_ohlc.py  crossover-example.py  kraken.py  kraken_futures_api.py  py_layer.bzl  pyproject.toml  requirements.txt  tick_to_ohlc.py
.github/workflows/: main.yml
ccxt_custom/: BUILD  BUILD.bazel  README.md
ccxt_custom/src/ccxt_custom/: kraken.py
data/: AAPL.csv  BUILD  BUILD.bazel  F.csv  GM.csv  README.md  __init__.py  scrape_yahoo.py
data/consumer_defensive/: AACG.csv  AAGRY.csv  AASZF.csv  AAYYY.csv  ABEV.csv  ACI.csv  ACNFF.csv  ACOPF.csv  ACOPY.csv  ACU.csv  ADM.csv  ADRNY.csv  ADWPF.csv  AEBZY.csv  AFRI.csv  AFRIW.csv  AFYA.csv  AGRI.csv  AGRIW.csv  AGRO.csv  AHODF.csv  AIU.csv  AIXN.csv  AJINY.csv  AJOY.csv  AKO-A.csv  AKO-B.csv  ALCO.csv  ALKM.csv  AMBO.csv  AMNF.csv  ANDE.csv  APEI.csv  APPH.csv  APPHW.csv  APRU.csv  AQB.csv  AQPW.csv  ARCE.csv  ARZTF.csv  (+622 more)
data/src/data/: __init__.py  combine_ohlc.py  constants.py  convert_kraken_symbols.py  fetch_kraken_ohlcv_data.py  fetch_kraken_tick_data.py  fix_write_stamp_alignment.py  scrape_yahoo.py  tick_to_ohlc.py  utils.py
data/test/: test_utils.py
docs/: adding-dependencies.md  building-code.md  building-docker-images.md  challenges-of-fetching-kraken-tick-data.md  code-style.md  introduction.md  running-on-gcp.md
docs/features/: backtesting.md  converting-tick-to-ohlcv-data.md  fetching-kraken-ohlcv-data.md  fetching-kraken-tick-data.md  jupyter-notebook.md  live-trading.md  optimizing-parameters.md  signal-position-generation.md
kraken/: BUILD
kraken/src/kraken/: convert_kraken_symbols.py  kraken.py
live/: BUILD  BUILD.bazel  README.md
live/src/live/: constants.py  execution.py  kraken.py  pnl.py  trades.py  utils.py
live/test/: test_execution.py
logging_custom/: BUILD.bazel  README.md
logging_custom/logging_config/: data_config.yaml  live_config.yaml  momentum_config.yaml
logging_custom/src/logging_custom/: logging_custom.py  utils.py
momentum/: BUILD  BUILD.bazel  Crypto Momentum.ipynb  README.md  analysis.py  backtest.py  constants.py  main.py  optimize.py  position_generation.py  signal_generation.py  simulation.py  utils.py
momentum/analysis/: BUILD  BUILD.bazel  README.md
momentum/analysis/src/analysis/: analysis.py
momentum/core/: BUILD  BUILD.bazel  README.md
momentum/core/src/core/: constants.py  utils.py  utils_nb.py
momentum/core/test/: test_utils.py
momentum/live/: BUILD
momentum/live/src/live/: constants.py  kraken.py
momentum/params/: optimize_params.yaml  optimize_rohrbach.yaml  rohrbach.yaml  rohrbach_all.yaml  rohrbach_high_volume.yaml  rohrbach_low_volume.yaml  v1.yaml
momentum/position_generation/: BUILD  BUILD.bazel  README.md
momentum/position_generation/src/position_generation/: benchmark.py  constants.py  diversification_multipliers.py  generate_positions.py  position_generation.py  rohrbach.py  utils.py  v1.py
momentum/signal_generation/: BUILD  BUILD.bazel  README.md
momentum/signal_generation/src/signal_generation/: common.py  constants.py  future_returns.py  historical_returns.py  rohrbach.py  signal_generation.py  volume.py
momentum/signal_generation/test/: test_common.py  test_volume.py
momentum/simulation/: BUILD  BUILD.bazel  README.md
momentum/simulation/src/simulation/: backtest.py  constants.py  fees.py  optimize.py  simulation.py  stats.py  utils.py
momentum/simulation/src/simulation/vbt/: __init__.py
momentum/simulation/src/simulation/vbt/vbtdev/: api.py  simulate.py
momentum/simulation/src/simulation/vbt/vbtpro/: api.py  simulate.py
momentum/simulation/test/: test_backtest.py  test_optimize.py  test_simulate.py  test_utils.py
notebook/: BUILD  BUILD.bazel  README.md
notebook/src/notebook/: notebook.py
scripts/: gcp_setup.sh  kraken_momo_cancel_all_gcp.sh  kraken_momo_gcp_shutdown.sh  kraken_momo_gcp_startup.sh  run_kraken_momo_docker.sh  run_kraken_momo_gcp.sh
