load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")
load("@pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "position_generation",
    srcs = glob(["src/**/*.py"]),
    imports = ["src"],
    deps = [
        requirement("static-frame"),
        "//momentum/signal_generation:signal_generation",
        "//data:data",
    ],
    visibility = ["//visibility:public"],
)
