load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library", "py_test")
load("@pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "signal_generation",
    srcs = glob(["src/**/*.py"]),
    imports = ["src"],
    deps = [
        requirement("pandas"),
        requirement("plotly"),
        requirement("numpy"),
        "//momentum/core:core",
        "//data:data",
    ],
    visibility = ["//visibility:public"],
)

py_test(
    name="test_common",
    srcs = ["test/test_common.py"],
    deps = [
        ":signal_generation",
        "//data:data",
    ],
    size="small",
)

py_test(
    name="test_volume",
    srcs = ["test/test_volume.py"],
    deps = [
        ":signal_generation",
        "//data:data",
    ],
    size="small",
)
